library/mysql/8.0/1 management server, and 3 MySQL servers/00_Overview.md
---
source: MySQL 8.0 Reference
title: 00_Overview
---

# The empty default sections are not required, and are shown only for
# the sake of completeness.
# Data nodes must provide a hostname but MySQL Servers are not required
# to do so.
# If you do not know the hostname for your machine, use localhost.
# The DataDir parameter also has a default value, but it is recommended to
# set it explicitly.
# [api] and [mgm] are aliases for [mysqld] and [ndb_mgmd], respectively.
[ndbd default]
NoOfReplicas= 1
[mysqld default]
[ndb_mgmd default]
[tcp default]
[ndb_mgmd]
HostName= myhost.example.com
[ndbd]
HostName= myhost.example.com
DataDir= /var/lib/mysql-cluster
[mysqld]
[mysqld]
[mysqld]
```

You can now start the ndb\_mgmd management server. By default, it attempts to read the config.ini file in its current working directory, so change location into the directory where the file is located and then invoke ndb\_mgmd:

```
$> cd /var/lib/mysql-cluster
$> ndb_mgmd
```

Then start a single data node by running ndbd:

```
$> ndbd
```

By default, ndbd looks for the management server at localhost on port 1186.

![](_page_23_Picture_10.jpeg)

#### **Note**

If you have installed MySQL from a binary tarball, you must to specify the path of the ndb\_mgmd and ndbd servers explicitly. (Normally, these can be found in /usr/local/mysql/bin.)

Finally, change location to the MySQL data directory (usually /var/lib/mysql or /usr/local/ mysql/data), and make sure that the my.cnf file contains the option necessary to enable the NDB storage engine:

```
[mysqld]
ndbcluster
```

You can now start the MySQL server as usual:

```
$> mysqld_safe --user=mysql &
```

Wait a moment to make sure the MySQL server is running properly. If you see the notice mysql ended, check the server's .err file to find out what went wrong.

If all has gone well so far, you now can start using the cluster. Connect to the server and verify that the NDBCLUSTER storage engine is enabled:

```
$> mysq1
Welcome to the MySQL monitor. Commands end with; or \g.
Your MySQL connection id is 1 to server version: 8.0.45

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql> SHOW ENGINES\G
...
*********************************
```

The row numbers shown in the preceding example output may be different from those shown on your system, depending upon how your server is configured.

Try to create an NDBCLUSTER table:

```
$> mysql
mysql> USE test;
Database changed

mysql> CREATE TABLE ctest (i INT) ENGINE=NDBCLUSTER;
Query OK, 0 rows affected (0.09 sec)

mysql> SHOW CREATE TABLE ctest \G
************************************
```

To check that your nodes were set up properly, start the management client:

```
$> ndb_mgm
```

Use the SHOW command from within the management client to obtain a report on the cluster's status:

```
ndb_mgm> SHOW

Cluster Configuration

[ndbd(NDB)] 1 node(s)
\nid=2 @127.0.0.1 (Version: 8.0.44-ndb-8.0.44, Nodegroup: 0, *)

[ndb_mgmd(MGM)] 1 node(s)
\nid=1 @127.0.0.1 (Version: 8.0.44-ndb-8.0.44)

[mysqld(API)] 3 node(s)
\nid=3 @127.0.0.1 (Version: 8.0.44-ndb-8.0.44)
\nid=4 (not connected, accepting connect from any host)
\nid=5 (not connected, accepting connect from any host)
```

At this point, you have successfully set up a working NDB Cluster. You can now store data in the cluster by using any table created with <code>ENGINE=NDBCLUSTER</code> or its alias <code>ENGINE=NDB</code>.